--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,11 +13,15 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: yarn
+      - name: Use Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.*
 
       - name: Install dependencies
         run: yarn
       - name: Lint
-        run: yarn lint:eslint
+        run: yarn lint
       - name: Test
         run: yarn test
       - name: Upload coverage
