--- a/package.json
+++ b/package.json
@@ -29,20 +29,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "@nestjs/common": "^8.2.2",
-    "@nestjs/core": "^8.2.2",
-    "kysely": "^0.8.1",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/core": "^9.2.1",
+    "kysely": "^0.22.0",
     "mysql2": "^2.3.3",
-    "pg": "^8.7.1",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@nestjs/testing": "^8.2.3",
-    "@types/jest": "^27.0.3",
-    "husky": "^7.0.4",
-    "jest": "^27.3.1",
-    "lint-staged": "^12.0.3",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.5.2"
+    "@nestjs/testing": "^9.2.1",
+    "@types/jest": "^29.2.4",
+    "@types/pg": "^8.6.6",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "lint-staged": "^13.1.0",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.4"
   }
 }
