--- a/example/package.json
+++ b/example/package.json
@@ -33,6 +33,7 @@
     "@nestjs/testing": "^8.2.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
