--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,9 @@
 name: release
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types:
+      - published
+
 jobs:
   build:
     runs-on: ubuntu-latest
