chore: post-install script of copy

--- a/example/package.json
+++ b/example/package.json
@@ -5,6 +5,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
+    "postinstall": "cd .. && yarn build && cp -R dist example/node_modules/nestjs-kysely/",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
