--- a/package.json
+++ b/package.json
@@ -25,23 +25,28 @@
     "clean": "rimraf ./dist",
     "format": "deno fmt -c deno.jsonc",
     "lint": "deno lint -c deno.jsonc",
-    "test": "jest"
+    "test": "jest",
+    "prepublishOnly": "yarn build"
   },
-  "dependencies": {
-    "@nestjs/common": "^9.2.1",
-    "@nestjs/core": "^9.2.1",
-    "kysely": "^0.22.0",
-    "mysql2": "^2.3.3",
-    "pg": "^8.8.0",
+  "peerDependencies": {
+    "@nestjs/common": "^8.0.0 || ^9.0.0",
+    "@nestjs/core": "^8.0.0 || ^9.0.0",
+    "kysely": "^0.24.2",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/core": "^9.2.1",
     "@nestjs/testing": "^9.2.1",
     "@types/jest": "^29.2.4",
     "@types/pg": "^8.6.6",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
+    "kysely": "^0.24.2",
     "lint-staged": "^13.1.0",
+    "mysql2": "^2.3.3",
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
