--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "peerDependencies": {
     "@nestjs/common": "^8.0.0 || ^9.0.0",
     "@nestjs/core": "^8.0.0 || ^9.0.0",
-    "kysely": "^0.24.2",
+    "kysely": "0.x",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
