--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "prepublishOnly": "yarn build"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.0.0 || ^9.0.0",
-    "@nestjs/core": "^8.0.0 || ^9.0.0",
+    "@nestjs/common": "^8.0.0 || ^9.0.0 || ^10.0.0",
+    "@nestjs/core": "^8.0.0 || ^9.0.0 || ^10.0.0",
     "kysely": "0.x",
     "reflect-metadata": "^0.1.13"
   },
