--- a/package.json
+++ b/package.json
@@ -35,20 +35,21 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@nestjs/common": "^9.2.1",
-    "@nestjs/core": "^9.2.1",
-    "@nestjs/testing": "^9.2.1",
-    "@types/jest": "^29.2.4",
-    "@types/pg": "^8.6.6",
-    "husky": "^8.0.2",
-    "jest": "^29.3.1",
-    "kysely": "^0.24.2",
-    "lint-staged": "^13.1.0",
-    "mysql2": "^2.3.3",
-    "pg": "^8.8.0",
+    "@nestjs/common": "^10.2.5",
+    "@nestjs/core": "^10.2.5",
+    "@nestjs/testing": "^10.2.5",
+    "@types/jest": "^29.5.5",
+    "@types/pg": "^8.10.2",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "kysely": "^0.26.3",
+    "lint-staged": "^14.0.1",
+    "mysql2": "^3.6.1",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.9.4"
+    "rimraf": "^5.0.1",
+    "rxjs": "^7.8.1",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   }
 }
