--- a/package.json
+++ b/package.json
@@ -32,22 +32,22 @@
     "@nestjs/common": "^8.0.0 || ^9.0.0 || ^10.0.0",
     "@nestjs/core": "^8.0.0 || ^9.0.0 || ^10.0.0",
     "kysely": "0.x",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13 || ^0.2.2"
   },
   "devDependencies": {
-    "@nestjs/common": "^10.2.5",
-    "@nestjs/core": "^10.2.5",
-    "@nestjs/testing": "^10.2.5",
-    "@types/jest": "^29.5.5",
-    "@types/pg": "^8.10.2",
+    "@nestjs/common": "^10.3.8",
+    "@nestjs/core": "^10.3.8",
+    "@nestjs/testing": "^10.3.8",
+    "@types/jest": "^29.5.12",
+    "@types/pg": "^8.11.5",
     "jest": "^29.7.0",
-    "kysely": "^0.26.3",
-    "mysql2": "^3.6.1",
-    "pg": "^8.11.3",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^5.0.1",
+    "kysely": "^0.27.3",
+    "mysql2": "^3.9.6",
+    "pg": "^8.11.5",
+    "reflect-metadata": "^0.2.2",
+    "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.5"
   }
 }
