--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "@nestjs/common": "^10.3.8",
     "@nestjs/core": "^10.3.8",
     "@nestjs/testing": "^10.3.8",
+    "@types/better-sqlite3": "^7.6.10",
     "@types/jest": "^29.5.12",
     "@types/pg": "^8.11.5",
+    "better-sqlite3": "^10.0.0",
     "jest": "^29.7.0",
     "kysely": "^0.27.3",
     "mysql2": "^3.9.6",
