feat: add ESM module support
- Bump version to 2.0.0
- Add ESM configuration files and update imports
- Update build and test configurations

Tested by running the scripts:

```bash
npm run build
npm run test
npm run format
npm run lint
```

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 22.x
-          cache: 'npm'
+          cache: "npm"
       - name: Use Deno
         uses: denoland/setup-deno@v1
         with:
