--- a/example/tsconfig.build.json
+++ b/example/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.cjs.json",
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
