--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "clean": "rimraf ./dist",
     "format": "deno fmt -c deno.jsonc",
     "lint": "deno lint -c deno.jsonc",
-    "test": "jest",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
@@ -39,17 +40,17 @@
     "@nestjs/core": "^11.0.11",
     "@nestjs/testing": "^11.0.11",
     "@types/better-sqlite3": "^7.6.12",
-    "@types/jest": "^29.5.14",
     "@types/pg": "^8.11.11",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "better-sqlite3": "^11.9.0",
-    "jest": "^29.7.0",
     "kysely": "^0.27.6",
     "mysql2": "^3.13.0",
     "pg": "^8.14.0",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.2",
-    "ts-jest": "^29.2.6",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "vitest": "^3.2.4"
   }
 }
