--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,5 +16,6 @@ jobs:
         with:
           node-version: 22.x
           registry-url: "https://registry.npmjs.org"
+      - run: npm install @rolldown/binding-linux-x64-gnu
       - run: npm ci
       - run: npm publish
