--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,7 +17,9 @@ jobs:
           deno-version: v1.*
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci
+          npm install @rollup/rollup-linux-x64-gnu
       - name: Lint
         run: npm run lint
       - name: Format
