--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,4 +18,4 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - run: npm install @rolldown/binding-linux-x64-gnu
       - run: npm ci
-      - run: npm publish
+      - run: npm publish --provenance
