back to publish with token

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,4 +18,6 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - run: npm install @rolldown/binding-linux-x64-gnu
       - run: npm ci
-      - run: npm publish --provenance
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
