exclude linux dependency binary

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
-          npm install @rollup/rollup-linux-x64-gnu
+          npm install --no-save @rollup/rollup-linux-x64-gnu
       - name: Lint
         run: npm run lint
       - name: Format
