--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 22.x
           registry-url: "https://registry.npmjs.org"
-      - run: npm install @rolldown/binding-linux-x64-gnu
+      - run: npm install --no-save @rolldown/binding-linux-x64-gnu
       - run: npm ci
       - run: npm publish
         env:
